tests/pointer_failure/error.txt
Validation error: ./tests/pointer_failure/pointer_failure.fae, line 3: Cannot take mutable address of immutable value
  3|     a.&mut
         ^^^^^^

Validation error: ./tests/pointer_failure/pointer_failure.fae, line 5: Cannot dereference `untyped integer` as it is not a pointer
  5|     5.*
         ^^^

Validation error: ./tests/pointer_failure/pointer_failure.fae, line 8: Cannot assign immutable memory location
  8|     ptr.* = 6
         ^^^^^^^^^
